--- a/RWEGame/RWEGame.vcxproj.filters
+++ b/RWEGame/RWEGame.vcxproj.filters
@@ -15,18 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\RWE\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\RWE\Application.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\RenderWorksEngine.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="source\RWE\Application.cpp">
+    <ClCompile Include="source\RWEGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
