--- a/RenderWorksEngine/RenderWorksEngine.vcxproj.filters
+++ b/RenderWorksEngine/RenderWorksEngine.vcxproj.filters
@@ -1,42 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="RWE">
+      <UniqueIdentifier>{331B880B-9F24-887C-28A0-9E7C94A8937C}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\RWE\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\RWE\RWEApp.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\RenderWorksEngine.h">
-      <Filter>Header Files</Filter>
+      <Filter>RWE</Filter>
     </ClInclude>
     <ClInclude Include="source\RWE\Entry.h">
-      <Filter>Header Files</Filter>
+      <Filter>RWE</Filter>
     </ClInclude>
     <ClInclude Include="source\RWE\Log.h">
-      <Filter>Header Files</Filter>
+      <Filter>RWE</Filter>
     </ClInclude>
+    <ClInclude Include="source\RWE\RWEApp.h">
+      <Filter>RWE</Filter>
+    </ClInclude>
+    <ClInclude Include="source\RenderWorksEngine.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\RWE\RWEApp.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="source\RWE\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RWE</Filter>
+    </ClCompile>
+    <ClCompile Include="source\RWE\RWEApp.cpp">
+      <Filter>RWE</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
