--- a/RenderWorksEngine/RenderWorksEngine.vcxproj.filters
+++ b/RenderWorksEngine/RenderWorksEngine.vcxproj.filters
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
     <Filter Include="RWE">
       <UniqueIdentifier>{331B880B-9F24-887C-28A0-9E7C94A8937C}</UniqueIdentifier>
     </Filter>
@@ -9,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Platform\Windows\WinWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="source\RWE\Core.h">
       <Filter>RWE</Filter>
     </ClInclude>
@@ -27,20 +36,40 @@
     <ClInclude Include="source\RWE\Events\MouseEvent.h">
       <Filter>RWE\Events</Filter>
     </ClInclude>
+    <ClInclude Include="source\RWE\Layer.h">
+      <Filter>RWE</Filter>
+    </ClInclude>
+    <ClInclude Include="source\RWE\LayerStack.h">
+      <Filter>RWE</Filter>
+    </ClInclude>
     <ClInclude Include="source\RWE\Log.h">
       <Filter>RWE</Filter>
     </ClInclude>
     <ClInclude Include="source\RWE\RWEApp.h">
       <Filter>RWE</Filter>
     </ClInclude>
+    <ClInclude Include="source\RWE\Window.h">
+      <Filter>RWE</Filter>
+    </ClInclude>
     <ClInclude Include="source\RenderWorksEngine.h" />
+    <ClInclude Include="source\rwepch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\Platform\Windows\WinWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
+    <ClCompile Include="source\RWE\Layer.cpp">
+      <Filter>RWE</Filter>
+    </ClCompile>
+    <ClCompile Include="source\RWE\LayerStack.cpp">
+      <Filter>RWE</Filter>
+    </ClCompile>
     <ClCompile Include="source\RWE\Log.cpp">
       <Filter>RWE</Filter>
     </ClCompile>
     <ClCompile Include="source\RWE\RWEApp.cpp">
       <Filter>RWE</Filter>
     </ClCompile>
+    <ClCompile Include="source\rwepch.cpp" />
   </ItemGroup>
 </Project>
