--- a/RenderWorksEngine/RenderWorksEngine.vcxproj.filters
+++ b/RenderWorksEngine/RenderWorksEngine.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
@@ -13,8 +16,14 @@
     <Filter Include="RWE\Events">
       <UniqueIdentifier>{B7CF8E90-A387-D0DD-0C8F-A939F8656BCE}</UniqueIdentifier>
     </Filter>
+    <Filter Include="RWE\ImGui">
+      <UniqueIdentifier>{9DEAD2BE-0955-8735-5293-38DBBE3C658A}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="source\Platform\Windows\WinWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -36,6 +45,9 @@
     <ClInclude Include="source\RWE\Events\MouseEvent.h">
       <Filter>RWE\Events</Filter>
     </ClInclude>
+    <ClInclude Include="source\RWE\ImGui\ImGuiLayer.h">
+      <Filter>RWE\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="source\RWE\Layer.h">
       <Filter>RWE</Filter>
     </ClInclude>
@@ -55,8 +67,14 @@
     <ClInclude Include="source\rwepch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="source\Platform\Windows\WinWindow.cpp">
       <Filter>Platform\Windows</Filter>
+    </ClCompile>
+    <ClCompile Include="source\RWE\ImGui\ImGuiLayer.cpp">
+      <Filter>RWE\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="source\RWE\Layer.cpp">
       <Filter>RWE</Filter>
